# project-time-tracker

./: .gitignore  DATABASE_MIGRATION.md  LICENSE  README.md  RELEASE_PROCESS.md  TIMER_FIX_SUMMARY.md  package-lock.json  package.json  test-db.js  test_db_migration.js  version.json  webpack.config.js  webpack.web.config.js
.github/: copilot-instructions.md
.github/workflows/: deploy_github_pages.yml  qt-build.yml  release.yml
docs/: CONTINUOUS_BLE_DEMO.md  DEMO_MODE_IMPLEMENTATION.md  DEMO_MODE_SCREENSHOTS.md  MCP_SERVER.md  MCP_SERVER_TESTING.md  TASKS_FEATURE.md  TASK_SCREENSHOTS.md  WEB_VERSION.md
docs/images/: Tasks-placeholder.md
qt_app/: .gitignore  BUILD_AND_TEST.md  CMakeLists.txt  IMPLEMENTATION_GUIDE.md  README.md  SUMMARY.md
qt_app/include/ble/: blemanager.h  presencemonitor.h
qt_app/include/database/: bledevicemodel.h  database.h  databasemigration.h  officePresencemodel.h  projectmodel.h  taskmodel.h  timeentrymodel.h
qt_app/include/managers/: projectmanager.h  settingsmanager.h  taskmanager.h  timeentrymanager.h
qt_app/include/utils/: datetimeutils.h
qt_app/qml/: main.qml  qml.qrc
qt_app/qml/views/: CalendarView.qml  ChartsView.qml  OfficePresenceView.qml  ProjectManagerView.qml  ReportsView.qml  SettingsView.qml  TasksView.qml  TimeEntryListView.qml  TimeTrackerView.qml
qt_app/scripts/: create-test-database.js  validate-build-requirements.sh
qt_app/src/: main.cpp
qt_app/src/ble/: blemanager.cpp  presencemonitor.cpp
qt_app/src/database/: bledevicemodel.cpp  database.cpp  databasemigration.cpp  officePresencemodel.cpp  projectmodel.cpp  taskmodel.cpp  timeentrymodel.cpp
qt_app/src/managers/: projectmanager.cpp  settingsmanager.cpp  taskmanager.cpp  timeentrymanager.cpp
qt_app/src/utils/: datetimeutils.cpp
qt_app/tests/: CMakeLists.txt  test_database.cpp  test_projectmanager.cpp  test_timeentrymanager.cpp
qt_app/translations/: app_en.ts  app_fr.ts
scripts/: README.md  populate-dev-data.js  postinstall.js  update-version.js
src/: main.js  preload.js  web-preload.js
src/app/: index-web.html  index-web.js  index.html  index.js  styles.css
src/components/: BleDevicesView.js  CalendarView.js  ChartsView.js  OfficePresenceView.js  ProjectManager.js  ReportsView.js  Settings.js  TasksView.js  TimeEntryList.js  TimeTracker.js
src/contexts/: LanguageContext.js  SettingsContext.js
src/database/: db.js  populate-demo-data-web.js  populate-demo-data.js
src/database/upgrades/: v1.js  v2.js  v3.js  v4.js  v5.js  v6.js  v7.js
src/mcp-server/: http-server.js  index.js  server.js
src/translations/: en.json  fr.json
tests/: comprehensive-timer-tests.js  cumulated-time-test.js  test-demo-mode-integration.js  test-demo-mode.js  test-http-mcp-server.js  timer-sync-tests.js  timer-tests.js
tests/unit/: README.md  ble-logs.test.js  database-examples.test.js  office-presence-database.test.js  project-database.test.js  task-database.test.js  tasks-view.test.js
